@@ -1,38 +1,41 @@
 package org.chenguoyu.leetcode.trace_back;
 
 
+import org.junit.Test;
+
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 /**
  * 分割回文串
+ * 给定一个字符串 s，将 s 分割成一些子串，使每个子串都是回文串。
+ * <p>
+ * 返回 s 所有可能的分割方案。
  */
 public class Solution131 {
     private List<List<String>> result;
 
     public List<List<String>> partition(String s) {
-        result = new ArrayList<>();
-        if (s == null || "".equals(s)) {
+        if (s == null || s.length() == 0) {
             return result;
         }
-
-        partition(s, 0, new ArrayList<>());
-
+        result = new ArrayList<>();
+        partition(s, 0, new LinkedList<>());
         return result;
     }
 
-
-    public void partition(String s, int beginIndex, List<String> palindromeStr) {
+    private void partition(String s, int beginIndex, LinkedList<String> es) {
         if (beginIndex == s.length()) {
-            result.add(new ArrayList<>(palindromeStr));
+            result.add(new ArrayList<>(es));
             return;
         }
         for (int i = beginIndex + 1; i <= s.length(); i++) {
             String str = s.substring(beginIndex, i);
             if (isPalindrome(str)) {
-                palindromeStr.add(str);
-                partition(s, i, palindromeStr);
-                palindromeStr.remove(palindromeStr.size() - 1);
+                es.add(str);
+                partition(s, i, es);
+                es.removeLast();
             }
         }
     }
@@ -49,4 +52,8 @@ public class Solution131 {
         return true;
     }
 
+    @Test
+    public void main() {
+        partition("aab");
+    }
 }
